2007-10-23  Piotr Eljasiak  <epiotr@use.pl>

	* src/utils.h:
	* src/tags/gnome-cmd-tags.h:
	Yet another fix for gcc-4.2

2007-10-22  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-clist.cc:
	Fixed problem with sporadically lost cursor in file pane

2007-10-19  Piotr Eljasiak  <epiotr@use.pl>

	* src/tags/gnome-cmd-tags.h:
	Yet another fix for gcc-4.2

2007-10-18  Piotr Eljasiak  <epiotr@use.pl>

	* src/tags/gnome-cmd-tags.h:
	Fix for gcc-4.2 compiling problem

2007-10-17  Piotr Eljasiak  <epiotr@use.pl>

	* src/libgviewer/bm_byte.c:
	* src/libgviewer/bm_byte.h:
	* src/libgviewer/bm_chartype.c:
	* src/libgviewer/bm_chartype.h:
	* src/libgviewer/cp437.h:
	* src/libgviewer/datapresentation.h:
	* src/libgviewer/fileops.c:
	* src/libgviewer/fileops.h:
	* src/libgviewer/gvtypes.h:
	* src/libgviewer/image-render.c:
	* src/libgviewer/image-render.h:
	* src/libgviewer/inputmodes.c:
	* src/libgviewer/inputmodes.h:
	* src/libgviewer/Makefile.am:
	* src/libgviewer/scroll-box.c:
	* src/libgviewer/scroll-box.h:
	* src/libgviewer/search-dlg.c:
	* src/libgviewer/search-dlg.h:
	* src/libgviewer/searcher.c:
	* src/libgviewer/searcher.h:
	* src/libgviewer/search-progress-dlg.c:
	* src/libgviewer/search-progress-dlg.h:
	* src/libgviewer/text-render.c:
	* src/libgviewer/text-render.h:
	* src/libgviewer/viewer-utils.c:
	* src/libgviewer/viewer-utils.h:
	* src/libgviewer/viewer-widget.c:
	* src/libgviewer/viewer-widget.h:
	* src/libgviewer/viewer-window.c:
	* src/libgviewer/viewer-window.h:
	Internal viewer: migration to C++

2007-10-15  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-collection.cc:
	* src/gnome-cmd-file-collection.h:
	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	Replaced gnome_vfs_list_sort() with its glib counterpart: g_list_sort_with_data().
	That fixes bug #424159 (column sort problem)

2007-10-11  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con-ftp.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-ftp-dialog.cc:
	* src/main.cc: