@@ -43,6 +43,7 @@ src/gnome-cmd-python-plugin.cc
 src/gnome-cmd-quicksearch-popup.cc
 src/gnome-cmd-rename-dialog.cc
 src/gnome-cmd-search-dialog.cc
+src/gnome-cmd-smb-auth.cc
 src/gnome-cmd-smb-path.cc
 src/gnome-cmd-user-actions.cc
 src/gnome-cmd-xfer-progress-win.cc
